simplified... and fixed EVERYTHING

--- a/digests/July 2024.md
+++ b/digests/July 2024.md
@@ -1,9 +1,9 @@
 ---
-title: July 2024
-short_title: July 2024
+title: Reads & Updates 07/2024
+short_title: Reads & Updates 07/2024
 date: "2024-07-27T16:17:28.457Z"
 draft: false
-description: "July 2024"
+description: "Life updates and some great links to things I've read this month."
 
 ---
 
